--- a/styles/style.css
+++ b/styles/style.css
@@ -16,24 +16,116 @@ h1 {
     background-color: dodgerblue;
 }
 
-.bookInfoDiv {
+.bookTitleDiv {
+    margin: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: white;
+    font-weight: bold;
+
+}
+
+.bookAuthorDiv {
     margin: 5px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: white;
 }
 
-.buttonDiv {
+.bookPagesDiv {
     margin: 5px;
-}
-
-.readButton {
-    background-color: forestgreen;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     color: white;
 }
+
+.buttonDiv {
+    position: relative;
+    margin: 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    text-align: left;
+    color: white;
+    line-height: 30px;
+}
+
+.switch {
+    position: relative;
+    margin-left:5px;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(167, 45, 45);
+    -webkit-transition: 0.4s;
+    transition: 0.4s;    
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #397a20;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #397a20;
+}
+
+input:checked + .slider:before {
+    -webkit-transition: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
 
 .delButton {
-    background-color: rgb(148, 31, 47);
+    position:absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(167, 45, 45);
+    border: none;
+    margin-left: 10px;
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    
 }
 
